--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
             <div class="footer-column">
                 <h3>Contact Info</h3>
                 <ul class="footer-links">
-                    <li><i class="fas fa-envelope"></i> help.starnet2@gmail.com</li>
+                    <li><i class="fas fa-envelope"></i> starnethelpline@gmail.com</li>
                     <li><i class="fas fa-clock"></i> Support: 24/7</li>
                     <li><i class="fas fa-map-marker-alt"></i> Nairobi, Kenya</li>
                 </ul>
