--- a/index.html
+++ b/index.html
@@ -825,11 +825,8 @@
                 <span>120 Days - Unlimited</span>
                 <span>Ksh 320</span>
             </button>
-        </div>
-        
-        <div class="inquiry">
-            Need a custom package? <a href="mailto:help.starnet2@gmail.com">Contact us</a> for special requests.
-        </div>
+        </div>     
+
     </section>
     
     <hr>
@@ -996,7 +993,7 @@
             <div class="footer-column">
                 <h3>Contact Info</h3>
                 <ul class="footer-links">
-                    <li><i class="fas fa-envelope"></i> help.starnet2@gmail.com</li>
+                    <li><i class="fas fa-envelope"></i> <a href="mailto:starnethelpline@gmail.com">Contact us</a></li>
                     <li><i class="fas fa-clock"></i> Support: 24/7</li>
                     <li><i class="fas fa-map-marker-alt"></i> Nairobi, Kenya</li>
                 </ul>
